--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img src="assets/logo.png" alt="Kampagnenlogo">
         <div>
           <h1>Solarstrom statt Erdgas-Strom</h1>
-          <p class="tagline">Du schreibst den Brief – wir übernehmen Ausdruck & Postversand an die Abgeordneten.</p>
+          <p class="tagline">Sie schreiben den Brief – wir übernehmen Ausdruck & Postversand an die Abgeordneten.</p>
           <a class="cta" href="#brief">Brief einreichen</a>
         </div>
       </div>
@@ -44,7 +44,7 @@
       <section id="brief" class="form-section">
         <h2>Brief einreichen</h2>
 
-        <div id="ok" class="notice ok">Danke! Wir haben deinen Brief erhalten. Vorgangs-ID: <b id="qid">–</b></div>
+        <div id="ok" class="notice ok">Danke! Wir haben Ihren Brief erhalten. Vorgangs-ID: <b id="qid">–</b></div>
         <div id="err" class="notice err"></div>
 
         <form id="campaign-form" method="post" action="/api/queue">
@@ -65,7 +65,7 @@
           </fieldset>
 
           <fieldset>
-            <legend>Deine Angaben (Absender:in)</legend>
+            <legend>Ihre Angaben (Absender:in)</legend>
             <div class="grid">
               <div><label for="first_name">Vorname *</label><input id="first_name" name="first_name" required></div>
               <div><label for="last_name">Nachname *</label><input id="last_name" name="last_name" required></div>
@@ -115,7 +115,7 @@ Mit freundlichen Grüßen
           </fieldset>
 
           <div class="actions"><button type="submit">In Druckwarteschlange einreichen</button></div>
-          <p class="disclaimer">Hinweis: Du erhältst eine Bestätigung mit Vorgangs-ID.</p>
+          <p class="disclaimer">Hinweis: Sie erhalten eine Bestätigung mit Vorgangs-ID.</p>
         </form>
       </section>
 
@@ -169,6 +169,7 @@ Mit freundlichen Grüßen
   </script>
 </body>
 </html>
+
 
 
 
