--- a/index.html
+++ b/index.html
@@ -1,192 +1,129 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="de">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Solarstrom statt Erdgas-Strom – Wir drucken & versenden Ihren Brief</title>
-  <meta name="description" content="Reichen Sie Ihren Brief bei uns ein – wir drucken, kuvertieren und versenden physisch an die zuständige Bundestagsabgeordnete.">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Solarstrom statt Erdgas-Strom – Brief einreichen</title>
   <link rel="stylesheet" href="assets/styles.css">
-
   <style>
-    .page { display:grid; grid-template-columns:1fr minmax(0,920px) 1fr; }
-    .middle { grid-column:2; width:100%; }
-    .hero { display:flex; align-items:center; justify-content:center; gap:16px; flex-wrap:wrap; text-align:center; }
-    .hero img { max-height:200px; width:auto; }
-    .hero .cta { display:inline-block; margin-top:8px; }
-    main.middle > section { margin:20px 0; }
-    footer .legal { text-align:center; display:block; }
-    #confirmation { margin-top:10px; font-weight:bold; color:green; }
+    body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; }
+    header { background: #000; color: #fff; padding: 20px; text-align: center; }
+    header img { max-height: 60px; }
+    main { max-width: 800px; margin: 20px auto; padding: 20px; }
+    form label { display: block; margin-top: 15px; font-weight: bold; }
+    form input, form textarea, form select {
+      width: 100%; padding: 10px; margin-top: 5px;
+      border: 1px solid #ccc; border-radius: 4px;
+    }
+    form textarea { min-height: 220px; }
+    .checkboxes { margin-top: 15px; }
+    .checkboxes label { font-weight: normal; display: block; margin: 5px 0; }
+    button {
+      margin-top: 20px; padding: 12px 20px;
+      background: #008000; color: #fff; border: none; border-radius: 4px;
+      cursor: pointer; font-size: 16px;
+    }
+    button:hover { background: #006400; }
+    .notice { margin-top: 20px; font-size: 0.9em; color: #555; }
+    .success { margin-top: 20px; padding: 10px; background: #e0ffe0; border: 1px solid #0a0; }
   </style>
 </head>
 <body>
-  <div class="page">
+  <header>
+    <img src="assets/logo.png" alt="Kampagnenlogo">
+    <h1>Solarstrom statt Erdgas-Strom</h1>
+    <p>Du schreibst den Brief – wir übernehmen Ausdruck & Postversand an die Abgeordneten.</p>
+  </header>
 
-    <header class="site-header middle">
-      <div class="hero">
-        <img src="assets/logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
-        <div>
-          <h1>Solarstrom statt Erdgas-Strom</h1>
-          <p class="tagline">Sie schreiben den Brief – wir übernehmen Ausdruck und Postversand an die Abgeordneten.</p>
-          <a class="cta" href="#brief">Brief einreichen</a>
-        </div>
-      </div>
-    </header>
+  <main>
+    <h2>So funktioniert’s</h2>
+    <ol>
+      <li>Brieftext verfassen und Absenderadresse angeben.</li>
+      <li>Der Brief geht an unser Kampagnenteam in die Druck-&-Post-Warteschlange.</li>
+      <li>Wir drucken, kuvertieren und versenden physisch an die zuständige/n MdB.</li>
+    </ol>
 
-    <main class="middle">
-      <section class="explainer">
-        <h2>So funktioniert’s</h2>
-        <ol>
-          <li>Sie verfassen Ihren Brief (Vorlagen vorhanden) und geben Ihre <strong>Absenderadresse</strong> an.</li>
-          <li>Der Brief geht <strong>an uns</strong> und landet in der Druck-&-Post-Warteschlange.</li>
-          <li>Wir drucken, kuvertieren und versenden physisch an die zuständige/n MdB.</li>
-        </ol>
-        <p>Wir verarbeiten Ihre Daten ausschließlich zur Durchführung des Postversands (Details in der Datenschutzerklärung).</p>
-      </section>
+    <h2>Brief einreichen</h2>
+    <form id="letterForm" method="post" action="/api/queue">
+      <!-- Empfänger -->
+      <label for="plz">Deine PLZ *</label>
+      <input type="text" id="plz" name="plz" required>
 
-      <section id="brief" class="form-section">
-        <h2>Brief einreichen</h2>
-        <form id="campaign-form" method="post" action="/api/queue">
-          <fieldset>
-            <legend>Ziel-Abgeordnete:r</legend>
-            <p>Standard: Wir ermitteln die Postanschrift anhand Ihrer PLZ und unseres Adressverzeichnisses.</p>
-            <div class="grid">
-              <div>
-                <label for="zip">Ihre PLZ *</label>
-                <input id="zip" name="zip" pattern="\d{5}" required placeholder="z. B. 10969">
-              </div>
-              <div>
-                <label for="city">Ort *</label>
-                <input id="city" name="city" required>
-              </div>
-            </div>
-            <label for="mp_name">Name der/s Abgeordneten (optional)</label>
-            <input id="mp_name" name="mp_name" placeholder="z. B. Max Mustermann, MdB">
-          </fieldset>
+      <label for="ort">Ort *</label>
+      <input type="text" id="ort" name="ort" required>
 
-          <fieldset>
-            <legend>Ihre Angaben (Absender:in)</legend>
-            <div class="grid">
-              <div>
-                <label for="first_name">Vorname *</label>
-                <input id="first_name" name="first_name" required>
-              </div>
-              <div>
-                <label for="last_name">Nachname *</label>
-                <input id="last_name" name="last_name" required>
-              </div>
-            </div>
+      <label for="abgeordneter">Name der/s Abgeordneten (optional)</label>
+      <input type="text" id="abgeordneter" name="abgeordneter">
 
-            <label for="email">E-Mail für Rückfragen/Kopie *</label>
-            <input id="email" name="email" type="email" required>
+      <!-- Absender -->
+      <label for="vorname">Vorname *</label>
+      <input type="text" id="vorname" name="vorname" required>
 
-            <label for="street">Straße &amp; Nr. *</label>
-            <input id="street" name="street" required>
+      <label for="nachname">Nachname *</label>
+      <input type="text" id="nachname" name="nachname" required>
 
-            <div class="grid">
-              <div>
-                <label for="sender_zip">PLZ (Absender:in) *</label>
-                <input id="sender_zip" name="sender_zip" pattern="\d{5}" required>
-              </div>
-              <div>
-                <label for="sender_city">Ort (Absender:in) *</label>
-                <input id="sender_city" name="sender_city" required>
-              </div>
-            </div>
-          </fieldset>
+      <label for="email">E-Mail *</label>
+      <input type="email" id="email" name="email" required>
 
-          <fieldset>
-            <legend>Brief</legend>
-            <div class="grid">
-              <div>
-                <label for="subject">Betreff *</label>
-                <input id="subject" name="subject" required value="Solarstrom vor Erdgas-Strom – bitte setzen Sie klare Prioritäten">
-              </div>
-              <div>
-                <label for="letter_style">Stil-Vorlage</label>
-                <select id="letter_style" name="letter_style">
-                  <option value="neutral">Neutral / sachlich</option>
-                  <option value="sozial">Sozial-ökologisch</option>
-                  <option value="wirtschaft">Wirtschaft &amp; Mittelstand</option>
-                </select>
-              </div>
-            </div>
+      <label for="strasse">Straße & Nr. *</label>
+      <input type="text" id="strasse" name="strasse" required>
 
-            <label for="message">Brieftext *</label>
-            <textarea id="message" name="message" rows="12" required>Sehr geehrte:r {Anrede_Name},
+      <label for="plz_abs">PLZ (Absender:in) *</label>
+      <input type="text" id="plz_abs" name="plz_abs" required>
+
+      <label for="ort_abs">Ort (Absender:in) *</label>
+      <input type="text" id="ort_abs" name="ort_abs" required>
+
+      <!-- Brief -->
+      <label for="subject">Betreff *</label>
+      <input type="text" id="subject" name="subject" 
+             value="Solarstrom vor Erdgas-Strom – bitte setzen Sie klare Prioritäten" required>
+
+      <label for="message">Brieftext</label>
+      <textarea id="message" name="message">
+Sehr geehrte/r {Anrede_Name},
 
 bitte setzen Sie sich dafür ein, dass Solar-Direktstrom in Deutschland eindeutig Vorrang vor Erdgas-Strom hat – rechtlich wie praktisch. Es braucht:
-• klare Prioritäten in Gesetzen und Verordnungen,
-• Netz- und Marktdesign, das flexible Direktnutzung fördert,
-• weniger Hürden für Prosumer, Kommunen und KMU.
+- klare Prioritäten in Gesetzen und Verordnungen,
+- Netz- und Marktdesign, das flexible Direktnutzung fördert,
+- weniger Hürden für Prosumer, Kommunen und KMU.
 
 Das stärkt Versorgungssicherheit, senkt Kosten und schützt unsere Lebensgrundlagen.
 
 Mit freundlichen Grüßen
 {Vorname} {Nachname}
-{Straße} {PLZ} {Ort}</textarea>
+{Straße}, {PLZ} {Ort}
+      </textarea>
 
-            <label class="checkbox-inline">
-              <input id="consent_print" name="consent_print" type="checkbox" required>
-              Ich willige ein, dass mein Brief an das Kampagnenteam übermittelt, für den <strong>Postversand</strong> aufbereitet
-              und in meinem Namen mit meiner <strong>Absenderadresse</strong> physisch versendet wird.
-            </label>
+      <!-- Optionen -->
+      <div class="checkboxes">
+        <label><input type="checkbox" name="postversand" required> 
+          Ich willige ein, dass mein Brief an das Kampagnenteam übermittelt, für den Postversand aufbereitet und in meinem Namen mit meiner Absenderadresse physisch versendet wird.
+        </label>
+        <label><input type="checkbox" name="copy"> 
+          Kopie an mich per E-Mail senden
+        </label>
+      </div>
 
-            <label class="checkbox-inline">
-              <input id="copy_to_self" name="copy_to_self" type="checkbox" checked> Kopie an mich per E-Mail senden
-            </label>
-          </fieldset>
+      <button type="submit">In Druckwarteschlange einreichen</button>
 
-          <div class="actions">
-            <button type="submit">In Druckwarteschlange einreichen</button>
-          </div>
-
-          <p class="disclaimer">
-            Hinweis: Sie erhalten eine Bestätigung mit Vorgangs-ID.
-          </p>
-
-          <!-- Bestätigungsausgabe -->
-          <div id="confirmation"></div>
-        </form>
-      </section>
-
-      <section class="faq">
-        <h2>FAQ</h2>
-        <details><summary>Welche Absenderdaten werden aufgedruckt?</summary><p>Standardmäßig Name, Straße, PLZ/Ort wie angegeben – notwendig für postalische Kommunikation.</p></details>
-        <details><summary>Wie wählt ihr die MdB-Adresse?</summary><p>Über unser Adressverzeichnis (Bundestag/Wahlkreis). Standard ist die Bundestagsadresse.</p></details>
-        <details><summary>Welche Daten speichert ihr?</summary><p>Nur das Notwendige für Nachweis, Druck & Versand (Löschkonzept siehe Datenschutz).</p></details>
-      </section>
-    </main>
-
-    <footer class="site-footer middle">
-      <nav class="legal">
-        <a href="impressum.html">Impressum</a> · <a href="datenschutz.html">Datenschutz</a>
-      </nav>
-      <p style="text-align:center">© Kampagne „Solarstrom statt Erdgas-Strom“</p>
-    </footer>
-  </div>
+      <p class="notice">Hinweis: Sie erhalten eine Bestätigung mit Vorgangs-ID.</p>
+      <div id="successMessage" class="success" style="display:none;"></div>
+    </form>
+  </main>
 
   <script>
-    document.getElementById("campaign-form").addEventListener("submit", async function(e) {
+    const form = document.getElementById('letterForm');
+    form.addEventListener('submit', async (e) => {
       e.preventDefault();
-      const formData = new FormData(this);
-      const body = Object.fromEntries(formData.entries());
-
-      const res = await fetch(this.action, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(body)
-      });
-
+      const formData = new FormData(form);
+      const res = await fetch(form.action, { method: 'POST', body: formData });
       const data = await res.json();
-      const conf = document.getElementById("confirmation");
-
-      if (data.queueId) {
-        conf.innerText = `Danke! Wir haben Ihren Brief erhalten. Vorgangs-ID: ${data.queueId}`;
-        conf.style.color = "green";
-      } else {
-        conf.innerText = "Es ist ein Fehler aufgetreten. Bitte versuchen Sie es erneut.";
-        conf.style.color = "red";
+      if (data.ok) {
+        document.getElementById('successMessage').style.display = 'block';
+        document.getElementById('successMessage').innerText = 
+          "Danke! Wir haben Ihren Brief erhalten. Vorgangs-ID: " + data.queueId;
+        form.reset();
       }
     });
   </script>
