--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; }
     header { background: #000; color: #fff; padding: 20px; text-align: center; }
-    header img { max-height: 60px; }
+    header img { max-height: 360px; }
     main { max-width: 800px; margin: 20px auto; padding: 20px; }
     form label { display: block; margin-top: 15px; font-weight: bold; }
     form input, form textarea, form select {
@@ -32,7 +32,7 @@
   <header>
     <img src="assets/logo.png" alt="Kampagnenlogo">
     <h1>Solarstrom statt Erdgas-Strom</h1>
-    <p>Du schreibst den Brief – wir übernehmen Ausdruck & Postversand an die Abgeordneten.</p>
+    <p>Sie schreiben den Brief – wir übernehmen Ausdruck & Postversand an die Abgeordneten.</p>
   </header>
 
   <main>
@@ -46,7 +46,7 @@
     <h2>Brief einreichen</h2>
     <form id="letterForm" method="post" action="/api/queue">
       <!-- Empfänger -->
-      <label for="plz">Deine PLZ *</label>
+      <label for="plz">Ihre PLZ *</label>
       <input type="text" id="plz" name="plz" required>
 
       <label for="ort">Ort *</label>
@@ -129,3 +129,4 @@ Mit freundlichen Grüßen
   </script>
 </body>
 </html>
+
