--- a/index.html
+++ b/index.html
@@ -1,172 +1,9 @@
-<!doctype html>
-<html lang="de">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Solarstrom statt Erdgas-Strom – Brief einreichen</title>
-  <link rel="stylesheet" href="assets/styles.css">
-  <style>
-    .page{display:grid;grid-template-columns:1fr minmax(0,920px) 1fr;min-height:100dvh}
-    .middle{grid-column:2}
-    .hero{display:flex;align-items:center;justify-content:center;gap:16px;flex-wrap:wrap;text-align:center}
-    .hero img{max-height:200px;width:auto}
-    .hero .cta{display:inline-block;margin-top:8px}
-    main.middle>section{margin:20px 0}
-    footer .legal{text-align:center;display:block}
-    .notice{display:none;margin:16px 0;padding:12px;border-radius:6px}
-    .ok{background:#e8f6ee;color:#106a36;border:1px solid #bde5c8}
-    .err{background:#fdecea;color:#a40000;border:1px solid #f5c2c0}
-  </style>
-</head>
-<body>
-  <div class="page">
-    <header class="site-header middle">
-      <div class="hero">
-        <img src="assets/logo.png" alt="Kampagnenlogo">
-        <div>
-          <h1>Solarstrom statt Erdgas-Strom</h1>
-          <p class="tagline">Du schreibst den Brief – wir übernehmen Ausdruck & Postversand an die Abgeordneten.</p>
-          <a class="cta" href="#brief">Brief einreichen</a>
-        </div>
-      </div>
-    </header>
-
-    <main class="middle">
-      <section class="explainer">
-        <h2>So funktioniert’s</h2>
-        <ol>
-          <li>Brieftext verfassen und <strong>Absenderadresse</strong> angeben.</li>
-          <li>Der Brief geht an unser Kampagnenteam in die Druck-&-Post-Warteschlange.</li>
-          <li>Wir drucken, kuvertieren und versenden physisch an die zuständige/n MdB.</li>
-        </ol>
-      </section>
-
-      <section id="brief" class="form-section">
-        <h2>Brief einreichen</h2>
-
-        <div id="ok" class="notice ok">Danke! Wir haben deinen Brief erhalten. Vorgangs-ID: <b id="qid">–</b></div>
-        <div id="err" class="notice err"></div>
-
-        <form id="campaign-form" method="post" action="/api/queue">
-          <fieldset>
-            <legend>Ziel-Abgeordnete:r</legend>
-            <div class="grid">
-              <div>
-                <label for="zip">Deine PLZ *</label>
-                <input id="zip" name="zip" pattern="\d{5}" required placeholder="z. B. 10969">
-              </div>
-              <div>
-                <label for="city">Ort *</label>
-                <input id="city" name="city" required>
-              </div>
-            </div>
-            <label for="mp_name">Name der/s Abgeordneten (optional)</label>
-            <input id="mp_name" name="mp_name" placeholder="z. B. Max Mustermann, MdB">
-          </fieldset>
-
-          <fieldset>
-            <legend>Deine Angaben (Absender:in)</legend>
-            <div class="grid">
-              <div><label for="first_name">Vorname *</label><input id="first_name" name="first_name" required></div>
-              <div><label for="last_name">Nachname *</label><input id="last_name" name="last_name" required></div>
-            </div>
-            <label for="email">E-Mail *</label><input id="email" name="email" type="email" required>
-            <label for="street">Straße & Nr. *</label><input id="street" name="street" required>
-            <div class="grid">
-              <div><label for="sender_zip">PLZ *</label><input id="sender_zip" name="sender_zip" pattern="\d{5}" required></div>
-              <div><label for="sender_city">Ort *</label><input id="sender_city" name="sender_city" required></div>
-            </div>
-          </fieldset>
-
-          <fieldset>
-            <legend>Brief</legend>
-            <div class="grid">
-              <div><label for="subject">Betreff *</label><input id="subject" name="subject" required value="Solarstrom vor Erdgas-Strom – bitte setzen Sie klare Prioritäten"></div>
-              <div>
-                <label for="letter_style">Stil-Vorlage</label>
-                <select id="letter_style" name="letter_style">
-                  <option value="neutral">Neutral / sachlich</option>
-                  <option value="sozial">Sozial-ökologisch</option>
-                  <option value="wirtschaft">Wirtschaft & Mittelstand</option>
-                </select>
-              </div>
-            </div>
-            <label for="message">Brieftext *</label>
-            <textarea id="message" name="message" rows="10" required>Sehr geehrte:r {Anrede_Name},
-
-bitte setzen Sie sich dafür ein, dass Solar-Direktstrom in Deutschland eindeutig Vorrang vor Erdgas-Strom hat – rechtlich wie praktisch. Es braucht:
-• klare Prioritäten in Gesetzen und Verordnungen,
-• Netz- und Marktdesign, das flexible Direktnutzung fördert,
-• weniger Hürden für Prosumer, Kommunen und KMU.
-
-Mit freundlichen Grüßen
-{Vorname} {Nachname}
-{Straße} {PLZ} {Ort}</textarea>
-
-            <label class="checkbox-inline">
-              <input id="consent_print" name="consent_print" type="checkbox" required>
-              Ich willige ein, dass mein Brief für den Postversand verarbeitet und in meinem Namen mit meiner Absenderadresse physisch versendet wird.
-            </label>
-
-            <label class="checkbox-inline">
-              <input id="copy_to_self" name="copy_to_self" type="checkbox" checked>
-              Kopie an mich per E-Mail senden
-            </label>
-          </fieldset>
-
-          <div class="actions"><button type="submit">In Druckwarteschlange einreichen</button></div>
-          <p class="disclaimer">Hinweis: Du erhältst eine Bestätigung mit Vorgangs-ID.</p>
-        </form>
-      </section>
-
-      <section class="faq">
-        <h2>FAQ</h2>
-        <details><summary>Welche Absenderdaten werden aufgedruckt?</summary><p>Name, Straße, PLZ/Ort wie angegeben – notwendig für postalische Kommunikation.</p></details>
-        <details><summary>Wie wählt ihr die MdB-Adresse?</summary><p>Über unser Adressverzeichnis (Bundestag/Wahlkreis). Standard ist die Bundestagsadresse.</p></details>
-        <details><summary>Welche Daten speichert ihr?</summary><p>Nur das Nötige für Nachweis, Druck & Versand (Löschkonzept siehe Datenschutz).</p></details>
-      </section>
-    </main>
-
-    <footer class="site-footer middle">
-      <nav class="legal"><a href="impressum.html">Impressum</a> · <a href="datenschutz.html">Datenschutz</a></nav>
-      <p style="text-align:center">© Kampagne „Solarstrom statt Erdgas-Strom“</p>
-    </footer>
-  </div>
-
-  <script>
-    const form = document.getElementById('campaign-form');
-    const ok = document.getElementById('ok'), err = document.getElementById('err'), qid = document.getElementById('qid');
-
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const data = Object.fromEntries(new FormData(form).entries());
-      data.copy_to_self = !!document.getElementById('copy_to_self')?.checked; // echtes Boolean
-      ok.style.display = 'none'; err.style.display = 'none';
-
-      try {
-        const res = await fetch(form.action, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json', 'Cache-Control': 'no-cache' },
-          cache: 'no-store',
-          body: JSON.stringify(data)
-        });
-        const text = await res.text(); let json;
-        try { json = JSON.parse(text); } catch { json = { raw: text }; }
-
-        if (!res.ok) {
-          err.textContent = 'Fehler: ' + (json.error || json.detail || json.message || json.raw || ('HTTP '+res.status));
-          err.style.display = 'block';
-          return;
-        }
-        qid.textContent = json.queueId || '–';
-        ok.style.display = 'block';
-        form.reset();
-      } catch (e2) {
-        err.textContent = 'Netzwerkfehler: ' + (e2?.message || e2);
-        err.style.display = 'block';
-      }
-    });
-  </script>
-</body>
-</html>
-
+<!doctype html><html lang="de"><head>
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Solarstrom statt Erdgas-Strom â€“ Coming Soon</title>
+  <style>body{margin:0;min-height:100vh;display:flex;flex-direction:column;align-items:center;justify-content:center;font:16px system-ui;background:#f5f5f5}
+  h1{margin:0 0 16px} img{max-width:320px;height:auto}</style>
+</head><body>
+  <h1>In KÃ¼rze gehtâ€™s los!</h1>
+  <img src="assets/logo.png" alt="Kampagnenlogo">
+</body></html>
