--- a/index.html
+++ b/index.html
@@ -1,9 +1,41 @@
-<!doctype html><html lang="de"><head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Solarstrom statt Erdgas-Strom – Coming Soon</title>
-  <style>body{margin:0;min-height:100vh;display:flex;flex-direction:column;align-items:center;justify-content:center;font:16px system-ui;background:#f5f5f5}
-  h1{margin:0 0 16px} img{max-width:320px;height:auto}</style>
-</head><body>
-  <h1>In Kürze geht’s los!</h1>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aktionsolarstrom</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #000000; /* Schwarzer Hintergrund */
+      color: #ffffff; /* Standard: weißer Text */
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      text-align: center;
+    }
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+    h2 {
+      font-size: 1.8em;
+      margin-bottom: 30px;
+    }
+    img {
+      max-width: 300px;
+      height: auto;
+    }
+  </style>
+</head>
+<body>
+  <h1>In Kürze geht’s los</h1>
+  <h2>Aktion Solarstrom statt Erdgas-Strom</h2>
   <img src="assets/logo.png" alt="Kampagnenlogo">
-</body></html>
+</body>
+</html>
+
