--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 </head>
 <body>
   <h1>In Kürze geht’s los</h1>
-  <h2>Aktion Solarstrom statt Erdgas-Strom</h2>
+  <h2>Aktion</h2>
   <img src="assets/logo.png" alt="Kampagnenlogo">
 </body>
 </html>
+
 
