--- a/index-full.html
+++ b/index-full.html
@@ -253,33 +253,42 @@ Mit freundlichen Grüßen
   <script>
 (function () {
   const $ = (s) => document.querySelector(s);
-  const tryAll = (sels) => sels.map($).find(Boolean);
+  const tryAll = (ss) => ss.map($).find(Boolean);
 
   const elPLZ = tryAll(['#plz', '#zip', 'input[name="plz"]', 'input[name="zip"]']);
   const elMP  = tryAll(['#abgeordneter', '#mp_name', 'input[name="abgeordneter"]', 'input[name="mp_name"]']);
   const elMSG = tryAll(['#message', 'textarea[name="message"]']);
+  if (!elPLZ || !elMSG) return;
 
-  // kleiner Debug-Hinweis unten am Button
-  const info = document.createElement('div');
-  info.style.fontSize = '12px';
-  info.style.color = '#666';
-  info.style.marginTop = '8px';
-  const actions = document.querySelector('.actions');
-  if (actions) actions.appendChild(info);
+  // --- Sanitizer & Helfer ---
+  const cleanName = (name) =>
+    String(name || '')
+      .replace(/^\s*nan\s+/i, '')
+      .replace(/\s+/g,' ')
+      .trim();
 
-  if (!elPLZ || !elMSG) {
-    info.textContent = 'Auto-MdB deaktiviert: PLZ- oder Brieftext-Feld nicht gefunden.';
-    return;
-  }
+  const cleanAnrede = (anrede) => {
+    const a = String(anrede || '')
+      .replace(/^\s*nan\s+/i, '')
+      .trim();
+    return a || 'Sehr geehrte Damen und Herren';
+  };
+
+  // einzeilig fürs Hidden-Feld
+  const addrOneLine = (addr) =>
+    String(addr || '').replace(/\s*\n\s*/g, ', ').replace(/\s+/g,' ').trim();
+
+  // mehrzeilig für den Brieftext
+  const addrMultiLine = (addr) =>
+    String(addr || '').replace(/\s*\n\s*/g, '\n').trim();
 
   async function loadJson(url) {
-    const res = await fetch(url, { cache: 'no-store' });
+    const res = await fetch(url, { cache:'no-store' });
     if (!res.ok) throw new Error(url + ' → HTTP ' + res.status);
     return res.json();
   }
 
   async function findMdBByPLZ(plz) {
-    // ACHTUNG: relative Pfade ohne führenden Slash
     const [plzMap, wkMap] = await Promise.all([
       loadJson('assets/data/plz_to_wk.json'),
       loadJson('assets/data/wk_to_mdb.json'),
@@ -290,26 +299,51 @@ Mit freundlichen Grüßen
     return wkMap[wk] || null;
   }
 
-  function ensureIntroOnce(textarea, anredeZeile) {
-    const current = textarea.value || '';
-    if (!/^\s*Sehr\s/i.test(current)) {
-      textarea.value = (anredeZeile + "\n\n" + current.trimStart()).trim();
+  function ensureIntroAndAddress(textarea, anrede, addrML) {
+    let txt = textarea.value || '';
+
+    // 1) Anrede nur einmal vorn einsetzen
+    if (!/^\s*Sehr\s/i.test(txt)) {
+      txt = (anrede + '\n\n' + txt.trimStart());
     }
+
+    // 2) MdB-Adresse einfügen:
+    //    - Wenn Platzhalter vorhanden, dort ersetzen
+    //    - Sonst nach der Anrede (1. Leerzeile) einfügen – aber nur einmal
+    if (addrML) {
+      if (txt.includes('{MdB_Adresse}')) {
+        txt = txt.replace('{MdB_Adresse}', addrML);
+      } else if (!txt.includes(addrML)) {
+        // nach der ersten Leerzeile nach der Anrede einfügen
+        const parts = txt.split(/\n\s*\n/);
+        if (parts.length > 1) {
+          txt = parts[0] + '\n' + addrML + '\n\n' + parts.slice(1).join('\n\n');
+        } else {
+          txt = addrML + '\n\n' + txt; // Fallback
+        }
+      }
+    }
+
+    textarea.value = txt.trimEnd();
   }
 
   async function handlePLZChange() {
     const plz = (elPLZ.value || '').trim();
-    if (!/^\d{5}$/.test(plz)) {
-      info.textContent = 'Bitte 5-stellige PLZ eingeben.';
-      return;
-    }
-    info.textContent = 'Suche MdB für PLZ ' + plz + ' …';
+    if (!/^\d{5}$/.test(plz)) return;
+
     try {
       const mdb = await findMdBByPLZ(plz);
       if (mdb) {
-        if (elMP) elMP.value = mdb.mdb_name || '';
-        const anrede = (mdb.anrede && mdb.anrede.trim()) ? mdb.anrede.trim() : 'Sehr geehrte Damen und Herren';
-        ensureIntroOnce(elMSG, anrede);
+        const name = cleanName(mdb.mdb_name) || [mdb.vorname, mdb.nachname].filter(Boolean).join(' ');
+        if (elMP) elMP.value = name;
+
+        const anrede = cleanAnrede(mdb.anrede);
+        const addrML = addrMultiLine(mdb.bundestag_address);
+
+        // Einfügen in den Brief (Anrede + mehrzeilige Adresse)
+        ensureIntroAndAddress(elMSG, anrede, addrML);
+
+        // Hidden-Feld mit einzeiliger Adresse fürs Backend
         let addr = document.getElementById('mp_address');
         if (!addr) {
           addr = document.createElement('input');
@@ -318,16 +352,17 @@ Mit freundlichen Grüßen
           addr.name = 'mp_address';
           elMSG.form && elMSG.form.appendChild(addr);
         }
-        addr.value = mdb.bundestag_address || '';
-        info.textContent = 'Treffer: ' + mdb.mdb_name;
+        addr.value = addrOneLine(mdb.bundestag_address);
+
+        console.log('Auto-MdB:', plz, '→', name);
       } else {
         if (elMP) elMP.value = '';
-        ensureIntroOnce(elMSG, 'Sehr geehrte Damen und Herren');
-        info.textContent = 'Kein Treffer für diese PLZ (Fallback gesetzt).';
+        ensureIntroAndAddress(elMSG, 'Sehr geehrte Damen und Herren', '');
+        console.warn('Auto-MdB:', plz, '→ kein WK/MdB gefunden (Fallback gesetzt).');
       }
     } catch (e) {
-      info.textContent = 'Fehler: ' + e.message;
-      ensureIntroOnce(elMSG, 'Sehr geehrte Damen und Herren');
+      console.error('Auto-MdB Fehler:', e);
+      ensureIntroAndAddress(elMSG, 'Sehr geehrte Damen und Herren', '');
     }
   }
 
@@ -337,6 +372,8 @@ Mit freundlichen Grüßen
 </script>
 
 
+
 </body>
 </html>
+
 
