--- a/index-full.html
+++ b/index-full.html
@@ -60,7 +60,7 @@
         <!-- Großes Logo (lege das Bild als assets/logo.png ins Repo) -->
         <img src="assets/logo.png" alt="Kampagnenlogo Solarstrom statt Erdgas-Strom">
         <div style="flex-basis:100%"></div>
-        <p class="tagline">Sie schreiben den Brief – wir übernehmen Ausdruck und Postversand an die Abgeordneten.</p>
+        <p class="tagline" style="color:#ffffff;":>Sie schreiben den Brief – wir übernehmen Ausdruck und Postversand an die Abgeordneten.</p>
         <a class="cta" href="#brief">Brief einreichen</a>
       </div>
     </header>
@@ -375,5 +375,6 @@ Mit freundlichen Grüßen
 
 </body>
 </html>
+
 
 
